--- a/src/main/scss/structure/mixin.scss
+++ b/src/main/scss/structure/mixin.scss
@@ -206,7 +206,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 200vw;
+	width: 100vw;
 	height: 100vh;
 	z-index: 10;
 	background-color: rgba(0, 0, 0, 0.5);
